--- a/src/app/features/lms/grp/components/medicals/components/medical-requirements/medical-requirements.component.css
+++ b/src/app/features/lms/grp/components/medicals/components/medical-requirements/medical-requirements.component.css
@@ -1,9 +1,400 @@
 .main {
-    padding: 40px 40px 20px 20px;
+  padding: 40px 40px 20px 20px;
 }
 
 .container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 4px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 4px;
 }
+
+/* table */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th {
+  text-align: left;
+  padding: 8px;
+  background-color: #BAD0E4;
+  white-space: nowrap;
+}
+
+td {
+  padding: 2px;
+  white-space: nowrap;
+}
+
+tr {
+  border-bottom: none !important;
+  height: 40px;
+}
+
+/* table end*/
+
+/* multiselect and form*/
+.container-fil {
+  display: flex;
+  justify-content: space-between;
+}
+
+.filter-container {
+  display: flex;
+}
+
+.filter-selectors {
+  display: flex;
+  margin-right: 15px;
+}
+
+.filter-selectors p-dropdown {
+  margin-right: 10px;
+}
+
+.filter-selectors input {
+  border-radius: 5px;
+  max-width: 200px;
+  border: 1px solid #c1c4c3;
+}
+
+.filter-label {
+  color: black;
+  margin-right: 5px;
+  white-space: nowrap;
+}
+
+:host ::ng-deep .p-dropdown {
+  width: 200px;
+  margin-bottom: 8px;
+}
+
+.form-search {
+  position: relative;
+  width: 270px;
+  display: flex;
+  align-items: center;
+}
+
+.form-search .fa-search {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 10px;
+  color: #9ca3af;
+}
+
+.form-input {
+  height: 35px;
+  text-indent: 33px;
+  border-radius: 4px;
+  width: 100%;
+  flex: 1;
+}
+
+.form-input:focus {
+  box-shadow: none;
+  border: 1;
+}
+
+p-multiSelect {
+  margin-left: 15px;
+  margin-top: 15px;
+}
+
+
+:host ::ng-deep .p-multiselect-label-container {
+  display: none;
+}
+
+:host ::ng-deep .p-multiselect {
+  height: auto;
+}
+
+:host ::ng-deep .p-multiselect-panel {
+  max-height: 300px;
+  max-width: 100%;
+  overflow-y: auto;
+}
+
+:host ::ng-deep .p-multiselect-trigger {
+  width: 20px;
+  height: 20px;
+}
+
+.poldets-table-container {
+  overflow-x: auto;
+  display: flex;
+}
+
+.poldets-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.poldets-table td {
+  width: 50%;
+}
+
+.table-label {
+  color: #868E96;
+}
+
+.table-label-desc {
+  color: black;
+}
+
+.flex-btn-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.bottom-button-share {
+  display: inline-flex;
+  height: 40px;
+  padding: 12px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #00529B;
+  float: right;
+  color: #00529B;
+}
+
+.text {
+  color: #FFF;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.text-share {
+  color: #00529B;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.proceed-button-container {
+  padding-right: 0px;
+  padding-top: 8px;
+  padding-left: 10px;
+}
+
+.share-button-container {
+  padding-top: 8px;
+}
+
+.bottom-button-proceed {
+  display: inline-flex;
+  height: 40px;
+  padding: 12px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: #00529B;
+  float: right;
+}
+
+.bottom-button-proceed:hover {
+  background-color: #459fee;
+}
+
+.back-button {
+  display: inline-flex;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border: none;
+  background: transparent;
+  color: #00529B;
+  float: left;
+  margin-top: 10px;
+  padding-left: 0px;
+  text-decoration: underline;
+  cursor: pointer;
+  margin-right: auto
+}
+
+.back-button:hover {
+  color: #007bff;
+}
+
+@media (max-width: 768px) {
+  .container-fil {
+    flex-direction: column;
+  }
+
+  .filter-container {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .form-search {
+    width: 100%;
+  }
+
+  .filter-selectors {
+    display: flex;
+  }
+
+  .filter-selectors p-dropdown,
+  input {
+    margin: 10px;
+  }
+
+  .filter-label {
+    justify-content: flex-start;
+  }
+
+  .form-search .fa-search {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 20px;
+    color: #9ca3af;
+  }
+
+  :host ::ng-deep .p-dropdown,
+  .input {
+    width: 100%;
+    margin-bottom: 8px;
+  }
+
+  .flex-btn-container {
+    display: block;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .bottom-button-proceed {
+    display: inline-flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #00529B;
+    float: right;
+  }
+
+  .back-button {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+
+  .bottom-button-share {
+    display: inline-flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #00529B;
+    float: right;
+    color: #00529B;
+  }
+
+  .share-button-container {
+    padding-right: 0;
+    padding-top: 8px;
+    padding-left: 0;
+    padding-bottom: 10px;
+  }
+
+  .proceed-button-container {
+    padding-right: 0;
+    padding-top: 8px;
+    padding-left: 0;
+  }
+
+  .poldets-table-container {
+    overflow-x: auto;
+    display: inline-block;
+  }
+}
+
+@media (max-width: 450px) {
+  :host ::ng-deep .filter-selectors .p-dropdown {
+    width: 200px;
+    margin-bottom: 8px;
+  }
+
+  .poldets-table-container {
+    overflow-x: auto;
+    display: inline-block;
+  }
+
+  .flex-btn-container {
+    display: block;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .bottom-button-proceed {
+    display: inline-flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: #00529B;
+    float: right;
+  }
+
+  .back-button {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+
+  .bottom-button-share {
+    display: inline-flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #00529B;
+    float: right;
+    color: #00529B;
+  }
+
+  .share-button-container {
+    padding-right: 0;
+    padding-top: 8px;
+    padding-left: 0;
+    padding-bottom: 10px;
+  }
+
+  .proceed-button-container {
+    padding-right: 0;
+    padding-top: 8px;
+    padding-left: 0;
+  }
+
+}
+
+/* multiselect and search form ends */
