VQ-1855:Ability to Add a Follower Insurance Company in a Co-Insurance Business on the V6 System

--- a/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.css
+++ b/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.css
@@ -101,3 +101,12 @@
     line-height: normal;
     text-align: center;
 }
+.cellEditorInput{
+    border: 1px solid #D9D9D9;
+    border-radius: 4px;
+    height: 30px;
+  }
+  ::ng-deep .p-button-icon  .pi-check{
+    color: green;
+  }
+  
