--- a/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
+++ b/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
@@ -106,27 +106,26 @@
                                     <span class="search-icon"><i class="fa fa-search"></i></span>
                                     <input type="text" placeholder="Search" id="search-input-Rsection" />
                                 </div>
-                                <p-table dataKey="code" [tableStyle]="{ 'min-width': '300px' }" [paginator]="true"
-                                [rows]="10">
+                                <p-table [value]="coinsuranceList" dataKey="code"
+                                    [tableStyle]="{ 'min-width': '300px' }" [paginator]="true" selectionMode="multiple"
+                                    [(selection)]="selectedCoinsurance" styleClass="p-datatable-sm"
+                                    responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [rows]="10">
                                     <ng-template pTemplate="header">
                                         <tr>
-                                            <!-- <th style="width: 4rem">
-                                                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-                                            </th> -->
                                             <th>Select</th>
                                             <th>Short description</th>
                                             <th>Name</th>
 
                                         </tr>
                                     </ng-template>
-                                    <ng-template pTemplate="body">
+                                    <ng-template pTemplate="body" let-coinsuranceList>
                                         <tr>
-                                            <!-- <td>
-                                                <p-tableCheckbox [value]="product"></p-tableCheckbox>
-                                            </td> -->
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
+                                            <td>
+                                                <p-tableCheckbox [value]="coinsuranceList"></p-tableCheckbox>
+                                            </td>
+                                            <td>{{coinsuranceList.shortDescription}}</td>
+                                            <td>{{coinsuranceList.name}}</td>
+
 
                                         </tr>
                                     </ng-template>
@@ -137,37 +136,46 @@
                                         </tr>
                                     </ng-template>
                                 </p-table>
+
+
+
                                 <div class="mt-4 d-flex justify-content-end">
-                                    <button type="button" class="btn btn-primary " id="saveDetails" data-bs-dismiss="modal" >Save </button>
-                                  </div>
+                                    <button type="button" class="btn btn-primary " id="saveDetails"
+                                        data-bs-dismiss="modal" (click)="saveSelectedCoinsurance()">Save </button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Delete Coicsurance Modal -->
-                <div class="modal fade" id="deleteCoinsurance" tabindex="-1" role="dialog" aria-labelledby="deleteCoinsurance" aria-hidden="true">
+                <div class="modal fade" id="deleteCoinsurance" tabindex="-1" role="dialog"
+                    aria-labelledby="deleteCoinsurance" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
-                      <div class="modal-content" id="deleteCoinsurance">
-                        <div class="modal-body ">
-                         <p class="deleteMessage mt-4 mb-4">Are you sure you want to delete?</p>
+                        <div class="modal-content" id="deleteCoinsurance">
+                            <div class="modal-body ">
+                                <p class="deleteMessage mt-4 mb-4">Are you sure you want to delete?</p>
 
-                         <div class="row mt-4 mb-2 d-flex justify-content-center">
-                            <div class="col-6 ">
-                              <button type="button" class="btn btn-outline-primary "  data-bs-dismiss="modal" >Cancel</button>
-                            </div>
-                            <div class="col-6 d-flex justify-content-end">
-                                <button type="button" class="btn btn-primary" id="save" data-bs-dismiss="modal" >Delete</button>
+                                <div class="row mt-4 mb-2 d-flex justify-content-center">
+                                    <div class="col-6 ">
+                                        <button type="button" class="btn btn-outline-primary "
+                                            data-bs-dismiss="modal">Cancel</button>
+                                    </div>
+                                    <div class="col-6 d-flex justify-content-end">
+                                        <button type="button" class="btn btn-primary" id="save"
+                                            data-bs-dismiss="modal">Delete</button>
 
+                                    </div>
+                                </div>
                             </div>
-                          </div>
                         </div>
-                      </div>
                     </div>
                 </div>
 
-                <p-table [tableStyle]="{'min-width': '300px'}" selectionMode="single" dataKey="code" editMode="row">
+                <p-table [value]="transformedCoinsurance" [tableStyle]="{'min-width': '300px'}" selectionMode="single"
+                    dataKey="agentCode" editMode="row">
                     <ng-template pTemplate="header">
                         <tr>
+                            <th><p-tableHeaderCheckbox /></th>
                             <th>Name</th>
                             <th>Leader</th>
                             <th>Percentage</th>
@@ -175,42 +183,181 @@
                             <th>Fee rate</th>
                             <th>Fee amount</th>
                             <th>Policy no</th>
+                            <th></th>
 
                         </tr>
                     </ng-template>
-                    <ng-template pTemplate="body" let-editing="editing" let-ri="rowIndex">
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                    <ng-template pTemplate="body" let-transformedCoinsurance let-editing="editing" let-ri="rowIndex">
+                        <tr [pEditableRow]="transformedCoinsurance">
+                            <td>
+                                <p-tableCheckbox [value]="transformedCoinsurance"></p-tableCheckbox>
+                            </td>
+                            <td>{{transformedCoinsurance.name}}</td>
+                            <td>
+                                <p-tableCheckbox id="leaderCheckbox" [value]="transformedCoinsurance?.lead" (click)="onLeaderChange($event)"></p-tableCheckbox>
+                            </td>
+                            
+                            <td [pEditableRow]="transformedCoinsurance.percentage" pEditableColumnField="percentage">
+                                <input [(ngModel)]="transformedCoinsurance.percentage" class="cellEditorInput"
+                                    type="text">
+                            </td>
+                            <!-- <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="transformedCoinsurance.percentage"
+                                            class="form-control form-control-sm " [ngModelOptions]="{standalone: true}">
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{transformedCoinsurance.percentage}}
+                                    </ng-template>
 
+                                </p-cellEditor>
+                            </td> -->
+                            <td [pEditableRow]="transformedCoinsurance.premium" pEditableColumnField="premium">
+                                <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
+                                <input [(ngModel)]="transformedCoinsurance.premium" class="cellEditorInput" type="text">
+                            </td>
+                            <td [pEditableRow]="transformedCoinsurance.feeRate" pEditableColumnField="feeRate">
+                                <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
+                                <input [(ngModel)]="transformedCoinsurance.feeRate" class="cellEditorInput" type="text">
+                            </td>
+                            <td [pEditableRow]="transformedCoinsurance.feeAmount" pEditableColumnField="feeAmount">
+                                <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
+                                <input [(ngModel)]="transformedCoinsurance.feeAmount" class="cellEditorInput"
+                                    type="text">
+                            </td>
+                            <td [pEditableRow]="transformedCoinsurance.policyNo" pEditableColumnField="policyNo">
+                                <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
+                                <input [(ngModel)]="transformedCoinsurance.policyNo" class="cellEditorInput"
+                                    type="text">
+                            </td>
 
 
                             <td>
-                                <!-- <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow icon="pi pi-pencil"  class="p-button-rounded p-button-text"></button> -->
-
-                                <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
-                                    class="p-button-rounded p-button-text">
-                                    <i class="fas fa-pencil"></i>
-                                </button>
 
 
-                                <!-- <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow icon="pi pi-check" (click)="updateRiskSection()" class="p-button-rounded p-button-text p-button-success mr-2"></button>
-                            <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"></button> -->
+
+                                <div class="flex align-items-center justify-content-center gap-2">
+                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                        icon="pi pi-pencil" class="p-button-rounded p-button-text">
+                                    </button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                        icon="pi pi-check" class="p-button-rounded p-button-text p-button-success mr-2"
+                                        (click)="onRowEdit(transformedCoinsurance)" 
+                                        style="color: #4bb543;">
+                                    </button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                        icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"
+                                        style="color: red;">
+                                    </button>
+                                </div>
+
                             </td>
                         </tr>
                     </ng-template>
                     <ng-template pTemplate="emptymessage">
                         <tr>
-                            <td colspan="8" style="padding: 20px; text-align:center " id="empty">No data to display.
+                            <td colspan="9" style="padding: 20px; text-align:center " id="empty">No data to display.
                             </td>
                         </tr>
                     </ng-template>
                 </p-table>
+              
+                <!-- <p-table [value]="transformedCoinsurance" dataKey="id" editMode="row"
+                    [tableStyle]="{'min-width': '50rem'}">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th><p-tableHeaderCheckbox /></th>
+                            <th>Name</th>
+                            <th>Leader</th>
+                            <th> Percentage</th>
+                            <th>Premium</th>
+                            <th>Fee rate</th>
+                            <th>Fee amount</th>
+                            <th>Policy no</th>
+                            <th></th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-transformedCoinsurance let-editing="editing" let-ri="rowIndex">
+                        <tr [pEditableRow]="transformedCoinsurance">
+                            <td>
+                                <p-tableCheckbox [value]="transformedCoinsurance"></p-tableCheckbox>
+                            </td>
+                            <td>{{transformedCoinsurance.name}}</td>
+                            <td>
+                                <p-tableCheckbox [value]="transformedCoinsurance"></p-tableCheckbox>
+                            </td>
+                            <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="transformedCoinsurance.percentage" />
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{transformedCoinsurance.price}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
+                            <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="transformedCoinsurance.premium" />
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{transformedCoinsurance.premium}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
+                            <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="transformedCoinsurance.feeRate" />
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{transformedCoinsurance.feeRate}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
+                            <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="transformedCoinsurance.feeAmount" />
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{transformedCoinsurance.feeAmount}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
+                            <td>
+                                <p-cellEditor>
+                                    <ng-template pTemplate="input">
+                                        <input pInputText type="text" [(ngModel)]="transformedCoinsurance.policyNo" />
+                                    </ng-template>
+                                    <ng-template pTemplate="output">
+                                        {{transformedCoinsurance.policyNo}}
+                                    </ng-template>
+                                </p-cellEditor>
+                            </td>
+                            <td>
+                                <div class="flex align-items-center justify-content-center gap-2">
+                                    <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow
+                                        icon="pi pi-pencil" 
+                                        class="p-button-rounded p-button-text" >
+                                    </button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow
+                                        icon="pi pi-check" 
+                                        class="p-button-rounded p-button-text p-button-success mr-2"
+                                        style="color: #4bb543;">
+                                    </button>
+                                    <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow
+                                        icon="pi pi-times" 
+                                        class="p-button-rounded p-button-text p-button-danger"
+                                        style="color: red;">
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table> -->
 
 
 
