--- a/src/app/features/crm/components/branch/branch.component.html
+++ b/src/app/features/crm/components/branch/branch.component.html
@@ -883,7 +883,7 @@
                 [(ngModel)]="selectedRegion"
                 optionLabel="name"
                 optionValue="id"
-                formControlName="region"
+                formControlName="transferRegion"
                 id="region"
                 [filter]="true"
                 filterBy="name"
