VQ-1858: unit tests update

--- a/src/app/features/reports-v2/create-report/create-report.component.html
+++ b/src/app/features/reports-v2/create-report/create-report.component.html
@@ -22,6 +22,7 @@
             placeholder="Pilot report"
             (input)="onReportNameChange($event)"
             style="padding: 8px"
+            id="onReportNameChange"
           >
           <h6 class="text-black mt-3">
             {{ 'report.subject_area' | translate }}<span class="text-danger">*</span>
