--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -174,6 +174,7 @@
       <button
         class="btn btn-outline-primary reassign-btn"
         (click)="openReassignModal()"
+        *ngIf="activeIndex !== 2 && selectedSpringTickets?.ticket?.sysModule === 'C' "
       >
         {{'mngt_wrkflw.tickets.reassign' | translate | titlecase }}
       </button>
@@ -181,7 +182,7 @@
       <button
         class="btn btn-success ms-2"
         (click)="onClickAuthorize()"
-        *ngIf="activeIndex === 2"
+        *ngIf="activeIndex === 2 && selectedSpringTickets?.ticket?.sysModule === 'P' "
       >
         {{'mngt_wrkflw.tickets.authorize' | translate | titlecase }}
       </button>
